Modificando el nombre del curso de Ansible

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
      <ul>
-         <li> Vagrant: Gerenciando maquinas virtuales </li>
-         <li> Docker: Creando containers sin dolor de cabeza </li>
-         <li> Ansible </li>
-         <li> Integración continua: Madurez y productividad en el Desarrolo de Software </li>
+         <li>Vagrant: Gerenciando maquinas virtuales </li>
+         <li>Docker: Creando containers sin dolor de cabeza </li>
+         <li>Ansible: Su infraestructura como código </li>
+         <li>Integración continua: Madurez y productividad en el Desarrolo de Software </li>
          <li>Kubernetes: Introducción a la orquestación de containers</li>
      </ul>
 </body>
